[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "x402-mock"
version = "0.2.1"
authors = [
  { name="Gengxing Pan", email="xxmuyou78@gmail.com" },
]
description = "HTTP 402 payment workflow implementation"
readme = "README.md"
license = "Apache-2.0"
keywords = ["http-402", "payment", "web3", "usdc", "erc20"]

requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "eth-account>=0.13.7",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "web3>=7.14.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "http://terrazipay.com"
Repository = "https://github.com/OpenPayhub/x402-mock"
Reference = "https://openpayhub.github.io/x402-mock/"